welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:25: error: value lenght is not a member of Array[java.awt.Color]
  for (i <- 0 to couleurs.lenght - 1)
                          ^Array1:27: error: not found: type i
    setCouleurBrosse(couleurs[i])
                              ^Array1:27: error: value couleurs of type Array[java.awt.Color] does not take type parameters.
    setCouleurBrosse(couleurs[i])
                             ^Array1:38: error: not enough arguments for method dessine: (couleurs: Array[java.awt.Color])Unit.
Unspecified value parameter couleurs.
  dessine()
         ^