welcome.lessons.welcome.array.basics.Array1.scala.code
def tableauCouleurs():Array[Color] =
{
  var tableau = new Array[Color] (getMondeHauteur())
  
  for (i <- 0 to getMondeHauteur() - 1)
  {
    tableau(i) = getCouleurSol()
    avance()
  }
  
  return tableau
}

def seReplace()
{
  gauche()
  avance()
  droite()
  avance()
}

def dessine(couleurs:Array[Color])
{
  for (i <- 0 to couleurs.lenght - 1)
  {
    setCouleurBrosse(couleurs[i])
    baisseBrosse()
    leveBrosse()
    avance()
  }
}

override def run()
{
  var couleurs = tableauCouleurs()
  seReplace()
  dessine()
}